# Computational_Math

./: .gitignore  LICENSE  README.md
task1/: .gitignore  CMakeLists.txt  TASK.md  run.sh  script.py
task1/1000*(x^3)+2000*(y^3)/choose_init_values/gs=500_th=8_bs=64_ep=0.1_l=1.0_rn=1000_ms=const_init_range/: meta.json
task1/1000*(x^3)+2000*(y^3)/choose_init_values/gs=500_th=8_bs=64_ep=0.1_l=1.0_rn=2999_ms=dynamic_init_range_max/: meta.json
task1/1000*(x^3)+2000*(y^3)/choose_init_values/gs=500_th=8_bs=64_ep=0.1_l=1.0_rn=658_ms=dynamic_init_aver/: meta.json
task1/1000*(x^3)+2000*(y^3)/choose_init_values/gs=500_th=8_bs=64_ep=0.1_l=1.0_rn=658_ms=dynamic_init_range_aver/: meta.json
task1/1000*(x^3)+2000*(y^3)/gs=10_th=8_bs=64_eps=0.1/: meta.json
task1/1000*(x^3)+2000*(y^3)/gs=1500_th=8_bs=64_ep=0.1_l=1.0_rn=11_ms=/: meta.json
task1/1000*(x^3)+2000*(y^3)/gs=1500_th=8_bs=64_eps=0.1/: meta.json
task1/1000*(x^3)+2000*(y^3)/gs=200_th=8_bs=64_ep=0.0001_l=1.0_rn=941_ms=/: meta.json
task1/1000*(x^3)+2000*(y^3)/gs=500_th=8_bs=64_eps=0.1/: meta.json
task1/choose_init_values/gs=500_th=8_bs=64_ep=0.1_l=1.0_rn=0_ms=const_init_range/: meta.json
task1/f_pi_des/: met_2.json  res_2.csv
task1/res/1000*(x^3)+2000*(y^3)/gs=1000_th=8_bs=64_ep=0.001_l=1.0_rn=147_ms=/: meta.json
task1/scripts/: generate_results.py  summarize_results.py
task1/src/: CMakeLists.txt  csv_save.c  csv_save.h  functions.c  functions.h  main.c  main.h  method.c  method.h
task2/: Second_Task.mw
task3/: README.md  WIKI.md  utility.py
task4/: README.md  main.py
(+22 files in other folders)
